* Improving IcmsVersionChecker to use IcmsSimpleRss instead of Snoopy as we were having problems on some config (malanciault)
* #207: Updated jQuery JavaScript Library v1.3.1. (stranger)
* #299: Code is not w3c conform. (MrTheme)
* #271: option of unique filenames along with prefix in uploader. (vaughan/stranger)
* #286: missing the default language on profile-module. (stranger)
* #459: Using an extended waiting block. (stranger/GIJOE)

'''Fixed'''
* #2161527: error in xoopsimagebrowser.php (real_therplima)
* #2176940: Can't change the theme using the block on user side (real_therplima)
* #2245090: Captcha being bypassed
* #2098718: Sortlinks on Customtag-Table with bad color (sato-san)
* #2245744: OpenID registration not possible from user.php (stranger)
* #2103517: Multilanguage tags & tables break translation (nachenko/malanciault)
* #2178956: Empty space when rank doesn't have an icon (malanciault)
* #2203239: Debugger stops icmsfeed (malanciault)
* #2207696: Blocksform: Cancel button not working (malanciault)
* #2215976: Character ' stripped out of website title (malanciault)
* #2259562: Edit front end blocks with wrong groups (malanciault/skenow)
* #2179432: Problem again with xoopsimagebrowser.php (real_therplima)
* #2316120: Giving some group access is a high security risk (skenow)
* #2324673: Content page edit button shown on user side for wrong groups (real_therplima)
* #2333245: Setting managed groups when creating a new group failed (skenow)
* #2353878: HTML editor for the disclaimer(felix)
* #2316581: When viewing comments in Threaded View it does not display the threads right and add's a > with the title twice (malanciault)
* #2181891: TinyMCE and XAMPP relative paths (nekro/malanciault)
* #2339182: Mail to User > missing checkbox (malanciault)
* #233: Translate the code comments of the file include/passwordquality.php (realtherplima)
* #183: Captcha bugs or enhancements ? (stranger)