@@ -54,6 +54,7 @@
  *   ifDateType       | date type that will be stored in the input field (by default it is same as dateType)
  *   langNumbers      | if "true" it will use number characters specified in language file. 
  *   autoShowOnFocus  | if "true", popup calendars will also be shown when their input field gets focus
+ *   autoFillAtStart  | if "true", inputField and displayArea will be filled on initialize.
  *
  *  None of them is required, they all have default values.  However, if you
  *  pass none of "inputField", "displayArea" or "button" you'll get a warning
@@ -93,6 +94,7 @@ Calendar.setup = function (params) {
 	param_default("ifDateType",      null);
 	param_default("langNumbers",     false);
 	param_default("autoShowOnFocus", false);
+	param_default("autoFillAtStart", false);
 
 	var tmp = ["inputField", "displayArea", "button"];
 	for (var i in tmp) {
@@ -105,6 +107,13 @@ Calendar.setup = function (params) {
 		return false;
 	}
 
+	if (params.autoFillAtStart) {
+		if (params.inputField && !params.inputField.value)
+			params.inputField.value = new Date(params.date).print(params.ifFormat, params.ifDateType || params.dateType, params.langNumbers);
+		if (params.displayArea && !params.displayArea.innerHTML)
+			params.displayArea.innerHTML = new Date(params.date).print(params.ifFormat, params.ifDateType || params.dateType, params.langNumbers);
+	}
+	
 	function onSelect(cal) {
 		var p = cal.params;
 		var update = (cal.dateClicked || p.electric);
@@ -147,7 +156,7 @@ Calendar.setup = function (params) {
 			cal.setDateFormat(params.ifFormat);
 		}
 		cal.create(params.flat);
-		if (params.inputField && typeof params.inputField.value == "string") {
+		if (params.inputField && typeof params.inputField.value == "string" && params.inputField.value) {
 			cal.parseDate(params.inputField.value, null, params.ifDateType || cal.dateType);
 		}
 		cal.show();
@@ -185,7 +194,7 @@ Calendar.setup = function (params) {
 		if (!cal.element) cal.create();
 		var dateEl = params.inputField || params.displayArea;
 		var dateType = params.inputField ? params.ifDateType || cal.dateType : cal.dateType;
-		if (dateEl) params.date = Date.parseDate(dateEl.value || dateEl.innerHTML, cal.dateFormat, dateType);
+		if (dateEl && (dateEl.value || dateEl.innerHTML)) params.date = Date.parseDate(dateEl.value || dateEl.innerHTML, cal.dateFormat, dateType);
 		if (params.date) cal.setDate(params.date);
 		cal.refresh();
 		if (!params.position)
